2017-10-5: Added KAPPA and ZETA to the DFT functioal according to Savin, Cremer and Perdew's papers

--- a/INT_XC/src/Makefile
+++ b/INT_XC/src/Makefile
@@ -1,7 +1,7 @@
 Program_name=test_intxc
 
 F90srcs = program.f90 INTXC_MOD.f90 INT_BASIS.f90\
-	  XC_MAT.f90 XC_DFT.f90 XC_DFTFC.f90 XC_GRIDGEN.f90 XC_GTOEVAL.f90 XC_RHOAB.f90\
+	  XC_MAT.f90 XC_DFT.f90 XC_DFTFC.f90 XC_GRIDGEN.f90 XC_GTOEVAL.f90 XC_RHOAB.f90 XC_KMCF.f90 XC_ZETA.f90\
 
 F77srcs = XC_LEBEDEV.F XC_LIB.F
 
@@ -11,8 +11,8 @@ LIB = INT_LIBCINT.a
 
 
 
-Complier2=ifort
-Complier1=gfortran
+Complier1=ifort
+Complier2=gfortran
 
 Link=-o
 
@@ -20,7 +20,7 @@ Link=-o
 #FLIB = -lmkl_intel_lp64 -lmkl_intel_thread -lmkl_core -liomp5 -lpthread -lm  -lblas
 
 #59.72.122.148 with GNU, gfortran only
-FLIB = -L /usr/lib64 -m64 -lblas -llapack
+FLIB = -L /usr/lib -m64 -lblas -llapack
 
 #mac OS with intel mkl
 #FLIB = -L${MKLROOT}/lib -Wl,-rpath,${MKLROOT}/lib -lmkl_intel_ilp64 -lmkl_sequential -lmkl_core -lpthread -lm -ldl
