--- a/INT_XC/src/Makefile
+++ b/INT_XC/src/Makefile
@@ -11,30 +11,30 @@ LIB = INT_LIBCINT.a
 
 
 
-Complier1=ifort
-Complier2=gfortran
+Complier2=ifort
+Complier1=gfortran
 
 Link=-o
 
 #192.9.200.120 with intel mkl
-#FLIB = -lmkl_intel_lp64 -lmkl_intel_thread -lmkl_core -liomp5 -lpthread -lm  -lblas
+FLIB = -lmkl_intel_lp64 -lmkl_intel_thread -lmkl_core -liomp5 -lpthread -lm  -lblas
 
 #59.72.122.148 with GNU, gfortran only
-FLIB = -L /usr/lib -m64 -lblas -llapack
+#FLIB = -L /usr/lib -m64 -lblas -llapack
 
 #mac OS with intel mkl
 #FLIB = -L${MKLROOT}/lib -Wl,-rpath,${MKLROOT}/lib -lmkl_intel_ilp64 -lmkl_sequential -lmkl_core -lpthread -lm -ldl
 
 $(Program_name):$(F90objs) $(F77objs)
-	$(Complier2) $(Link) $(Program_name) $(F90objs) $(F77objs) $(LIB) $(FLIB)
+	$(Complier1) $(Link) $(Program_name) $(F90objs) $(F77objs) $(LIB) $(FLIB)
 
 .SUFFIXES : .F .f90 .o
 
 .f90.o:
-	$(Complier2) -O2 -g -c $<
+	$(Complier1) -O2 -g -c $<
 
 .F.o:
-	$(Complier2) -O2 -g -c $<
+	$(Complier1) -O2 -g -c $<
 
 .PHONY:clean
 clean : 
