--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -166,6 +166,7 @@ set(ORBOPT_SOURCE_FILES
    ${PROJECT_SOURCE_DIR}/src/orbopt_version.f90
    ${PROJECT_SOURCE_DIR}/src/mgmres.f90
    ${PROJECT_SOURCE_DIR}/src/Solver_gmres.f90
+   ${PROJECT_SOURCE_DIR}/src/interface.f90
    ${PROJECT_SOURCE_DIR}/src/trycuda.cu
 )
 
